application structure, add http-statutes

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "express": "^5.2.1",
-    "yarn": "^1.22.22"
+    "express": "^5.2.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
